# algos

./: .gitignore  AOC-2023-05.input  CMakeLists.txt  README.md  main.cpp  randomizer.cpp
archive/: 1478C.cpp  1481A.cpp  1481B.cpp  1481C.cpp  1484B.cpp  1491C-Pekora.cpp  1492C.cpp  1494A.cpp  1494B.cpp  1496A.cpp  1498A.cpp  1498B.cpp  1498C - DP.cpp  2010A.cpp  2010B.cpp  2067B.cpp  2228A.cpp  2231A.cpp  2231B.cpp  2231C.cpp  2232B.cpp  703ADIV2.cpp  AOC-2023-01.cpp  AOC-2023-02.cpp  AOC-2023-03.cpp  AOC-2023-04.cpp  AOC-2023-06.cpp  AOC-2023-06.input  AOC-2023-07.cpp  AOC-2023-08.cpp  AOC-2023-09.cpp  AOC-2023-10.cpp  AOC-2023-11.cpp  BS-consecutive-1-binary.cpp  BS-count-exact-sum.cpp  BS-largest-binary-search-subtree-in-nodes.cpp  BS-largest-square-matrix.cpp  BS-largest-square-submatrix.cpp  BS-longest-increasing-path.cpp  BS-longest-palindromic-subsequence.cpp  (+130 more)
archive/notes/dynamic-programming/: 0-1-knapsack.txt
randomizer/: randomizer_meta.hpp.in
